Test the new FuzzyPointMap through reading an STL file with some vertices slightly perturbed.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -42,7 +42,13 @@ add_test("Python-CSGOperators" "python" "${CMAKE_SOURCE_DIR}/test/test-csg.py")
 set_property(TEST "Python-CSGOperators" PROPERTY
     ENVIRONMENT "PYTHONPATH=${PYTHON_ENVIR}"
 )
-  
+
+############# Test the fuzzy point map ########################################################
+add_test("Python-FuzzyPointMap" "python" "${CMAKE_SOURCE_DIR}/test/test-fuzzypointmap.py")
+set_property(TEST "Python-FuzzyPointMap" PROPERTY
+    ENVIRONMENT "PYTHONPATH=${PYTHON_ENVIR}"
+)
+
 ############# Test the mesh generation ########################################################
 add_test("Python-MeshGeneration" "python" "${CMAKE_SOURCE_DIR}/test/test-mesh-generation.py")
 set_property(TEST "Python-MeshGeneration" PROPERTY
